# powermenu

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
images/: Makefile.am
src/: Makefile.am  main.c
