AUTOMAKE_OPTIONS=foreign

#powermenu_CFLAGS = @GTK_CFLAGS@
#powermenu_LDADD = @GTK_LIBS@
#powermenu_SOURCES=src/main.c

EXTRA_DIST = HACKING
CLEANFILES = *~
SUBDIRS = src

imagesdir=images
nobase_dist_images_DATA		=images/pwr.png \
													 images/restart.png \
													 images/suspend.png \
													 images/cancel.png
